--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ section {
     overflow-x: hidden;
     overflow-y: hidden;
     min-height: 100vh;
-    min-width: 100vw;
+    max-width: 100vw;
     align-items: center;
     justify-content: center;
     display: flex;
